--- a/character/character.html
+++ b/character/character.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-custom_css: [cha_detail]
+custom_css: [cha_detail, cha_detail_img]
 custom_js: [cha_detail, tooltip, detail/dot-carousel, marked.min]
 custom_data: [characters/characters.js, revelations/revelations.js, characters/character_ritual.js, characters/character_skills.js, characters/character_weapon.js, characters/character_operation.js, characters/character_party.js, tooltip.js, wonder/persona.js, wonder/weapons.js, characters/character_review.js]
 permalink: /character.html
@@ -46,7 +46,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     document.write(`<a href="../../?v=${APP_VERSION}">${homeText}</a>`);
                 </script>
                 <span class="separator">/</span>
-                <script>document.write(`<a href="./?v=${APP_VERSION}">${characterText}</a>`);</script>
+                <script>document.write(`<a href="/character/?v=${APP_VERSION}">${characterText}</a>`);</script>
                 <span class="separator">/</span>
                 <span class="current-page"></span>
             </div>
