--- a/character/character.html
+++ b/character/character.html
@@ -1489,7 +1489,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         // 진급강화/스킬깨달음 라벨 번역
         const mindStatsLabels = {
             'kr': ['진급강화 1', '진급강화 2', '스킬깨달음 1', '스킬깨달음 2'],
-            'en': ['Promotion 1', 'Promotion 2', 'Skill Awakening 1', 'Skill Awakening 2'],
+            'en': ['Promotion 1', 'Promotion 2', 'Skill Enforce 1', 'Skill Enforce 2'],
             'jp': ['進級強化 1', '進級強化 2', 'スキル覚醒 1', 'スキル覚醒 2']
         };
         document.querySelectorAll('.mind-stats .stat-row .label, .mind-skills .skill-row .label').forEach((el, index) => {
@@ -1545,8 +1545,8 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     '생명': 'HP',
                     '생명력': 'HP',
                     '공격력': 'Attack',
-                    '대미지 보너스': 'Dmg Bonus(ATK Mult)',
-                    '대미지보너스': 'Dmg Bonus(ATK Mult)',
+                    '대미지 보너스': 'DMG Bonus(ATK Mult)',
+                    '대미지보너스': 'DMG Bonus(ATK Mult)',
                     '크리티컬 확률': 'Crit Rate',
                     '크리티컬확률': 'Crit Rate',
                     '크리티컬 효과': 'Crit Mult',
@@ -1767,8 +1767,8 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 '생명': 'HP',
                 '생명력': 'HP',
                 '공격력': 'Attack',
-                '대미지 보너스': 'Dmg Bonus(ATK Mult)',
-                '대미지보너스': 'Dmg Bonus(ATK Mult)',
+                '대미지 보너스': 'DMG Bonus(ATK Mult)',
+                '대미지보너스': 'DMG Bonus(ATK Mult)',
                 '크리티컬 확률': 'Crit Rate',
                 '크리티컬확률': 'Crit Rate',
                 '크리티컬 효과': 'Crit Mult',
