--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -78,7 +78,7 @@ alternate_urls:
         </div>
 
         <div class="about-section" id="exchange-code-section">
-            <button id="exchangeCodeButton" class="donate-button">KR 교환코드 (v4.2.1)</button>
+            <button id="exchangeCodeButton" class="donate-button">KR 교환코드 (v4.3.1)</button>
         </div>
 
         <div class="about-section">
@@ -318,7 +318,7 @@ alternate_urls:
 <div id="exchangeCodeModal" class="modal">
     <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h3>KR 교환코드 (v4.2.1)</h3>
+        <h3>KR 교환코드 (v4.3.1)</h3>
         <p class="exchange-notice">
             한국 서버 크리에이터 프로그램을 통해 제공되는 교환코드입니다. 비정기적으로 업데이트 될 수 있습니다.
         </p>
@@ -486,36 +486,36 @@ alternate_urls:
     function initializePageContent() {
         
         // 교환코드 목록 (새로운 코드로 업데이트하려면 이 문자열만 수정하면 됩니다)
-        const exchangeCodes = `01678857UEWRQVMB
-26372778UGAAKCNN
-58629929UAVVOXAI
-68182968UCGFGTEI
-81689670UDUKGIVS
-78614945UMEZXNGM
-42980977UNKIOTEZ
-77508684UHZXQSEF
-02134752UJJNHZCQ
-59580397UKYPYBVA
-98856281UVILUKWM
-49066932UWXTOPVW
-53124247USHCHNWU
-93525577UTQRVFFS
-86397191UPNAXUDQ
-68198014UQPVDNVH
-74682243UYMFIHFY
-51771211UZOKARLB
-66637392VFDZEMXP
-15812601VGTIWDQM
-39272361VBCXJLLA
-45705615VCSNQLWW
-32244822VLBPQRSO
-39931467VMRLMOHB
-76034130VHATZQZE
-29384886VIWCYFVJ
-00331529VKGRRILF
-88018594VUVAUXTF
-76681685VWFVCFLB
-58855249VRUFBYFF`;
+        const exchangeCodes = `21333521UETIMJEZ
+42395216UGCXZGKV
+58648538UASNJWQH
+28287001UCBPKBXU
+88260110UDRLGIQV
+81905277UMATRKIY
+78451752UNWCPAMC
+99860020UIGRLLAE
+26232937UJVAVQQU
+70929513UUFVBHNZ
+28374973UVUFZTHR
+14584037UREKQJQX
+52916733USJZHVCD
+15693541UTZIDQGN
+45214464UPIXMHHW
+61873477UQYNBIBI
+82702629UYHPCNAY
+07922499UZXLCKZU
+57533149VFNTOVUQ
+04364151VGQCYVQP
+56314196VBMRDDZO
+01819159VCPAEAZI
+62488976VLLVEATQ
+18207277VMOFXMAQ
+93126685VHDKUDYN
+44596323VISZRBGF
+09314421VKCICRVP
+65698561VURXGRSW
+10409459VWBNUBML
+40556640VRWPZNNM`;
 
         // 교환코드 동적 생성 함수
         function generateExchangeCodes() {
