--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 custom_css: [tactic]
-custom_js: [tooltip, tactic/share, tactic/import, tactic/export, tactic/setparty, tactic/setwonder, tactic/partyimg, tactic/createAction, tactic/renderTurns, tactic/updateAuto, tactic/findPattern, simulator]
+custom_js: [tooltip, tactic/share, tactic/library-loader, tactic/import, tactic/export, tactic/setparty, tactic/setwonder, tactic/partyimg, tactic/createAction, tactic/renderTurns, tactic/updateAuto, tactic/findPattern]
 custom_data: [tooltip.js, tactic/pattern.js, characters/characters.js, revelations/revelations.js, wonder/weapons.js, wonder/persona.js, wonder/skills.js]
 permalink: /tactic/
 language: kr
 title : 택틱 메이커 - 페르소나5 더 팬텀 X 루페르넷
 description: 페르소나5 더 팬텀 X 택틱 메이커
 ---
+{% include supabase-config.html %}
 
 
   <script src="https://cdn.jsdelivr.net/npm/html-to-image@1.11.11/dist/html-to-image.min.js"></script>
