--- a/apps/tactic/tactic-upload.html
+++ b/apps/tactic/tactic-upload.html
@@ -546,6 +546,8 @@ class TacticUploader {
         this.tacticData = null;
         this.tacticPreview = new TacticPreview();
         this.currentLang = this.getCurrentLanguage();
+        this.editMode = false;
+        this.editPostId = null;
         
         this.init();
     }
@@ -569,6 +571,7 @@ class TacticUploader {
         }, 100);
         this.initEventListeners();
         this.initRegionDropdown();
+        this.checkEditMode();
     }
 
     initLanguage() {
@@ -750,6 +753,121 @@ class TacticUploader {
         });
 
         // 택틱 타입 변경 시 제목 자동 접두어 추가는 사용하지 않음
+    }
+
+    getUrlParams() {
+        try { return new URLSearchParams(window.location.search); } catch (_) { return new URLSearchParams(); }
+    }
+
+    async checkEditMode() {
+        const params = this.getUrlParams();
+        const edit = params.get('edit');
+        const id = params.get('id');
+        if (edit === '1' && id) {
+            await this.loadEditRecord(id);
+        }
+    }
+
+    async loadEditRecord(id) {
+        try {
+            const { data, error } = await supabase
+                .from('tactics')
+                .select('*')
+                .eq('id', id)
+                .maybeSingle();
+            if (error || !data) {
+                alert(this.currentLang === 'en' ? 'Post not found.' : this.currentLang === 'jp' ? '投稿が見つかりません。' : '게시물을 찾을 수 없습니다.');
+                window.location.href = '/tactic/tactics.html';
+                return;
+            }
+            if (!this.currentUser || (data.user_id && data.user_id !== this.currentUser.id)) {
+                alert(this.currentLang === 'en' ? 'You do not have permission to edit this post.' : this.currentLang === 'jp' ? 'この投稿を編集する権限がありません。' : '이 게시물을 수정할 권한이 없습니다.');
+                window.location.href = '/tactic/tactics.html';
+                return;
+            }
+            this.editMode = true;
+            this.editPostId = data.id;
+            // 필드 채우기
+            document.getElementById('tacticTitle').value = data.title || '';
+            document.getElementById('tacticAuthor').value = data.author || '';
+            document.getElementById('tacticComment').value = data.comment || '';
+            if (data.region) document.getElementById('tacticRegion').value = data.region;
+            if (data.tactic_type) document.getElementById('tacticType').value = data.tactic_type;
+            try {
+                this.tacticData = typeof data.query === 'string' ? JSON.parse(data.query) : data.query;
+                this.showJsonPreview(this.tacticData);
+            } catch (_) {}
+            this.enableEditUI();
+        } catch (e) {
+            alert(this.currentLang === 'en' ? 'Failed to load the post.' : this.currentLang === 'jp' ? '投稿の読み込みに失敗しました。' : '게시물 불러오기에 실패했습니다.');
+            window.location.href = '/tactic/tactics.html';
+        }
+    }
+
+    enableEditUI() {
+        const pageTitle = document.getElementById('page-title');
+        if (pageTitle) pageTitle.textContent = (this.currentLang === 'en' ? 'Edit Tactic' : this.currentLang === 'jp' ? 'タクティック編集' : '택틱 수정');
+        const navCurrent = document.getElementById('nav-current');
+        if (navCurrent) navCurrent.textContent = (this.currentLang === 'en' ? 'Tactics / Edit' : this.currentLang === 'jp' ? 'タクティック / 編集' : '택틱 / 수정');
+        const actions = document.querySelector('.form-actions');
+        if (actions) {
+            actions.innerHTML = `
+                <button type="button" id="saveButton" class="submit-btn">${this.currentLang === 'en' ? 'Save' : this.currentLang === 'jp' ? '保存' : '저장'}</button>
+                <button type="button" id="deleteButton" class="preview-btn" style="border-color:#ff6b6b;color:#ff6b6b;">${this.currentLang === 'en' ? 'Delete' : this.currentLang === 'jp' ? '削除' : '삭제'}</button>
+                <button type="button" id="cancelButton" class="preview-btn">${this.currentLang === 'en' ? 'Cancel' : this.currentLang === 'jp' ? '取消' : '취소'}</button>
+            `;
+            document.getElementById('saveButton').onclick = () => this.saveEdit();
+            document.getElementById('deleteButton').onclick = () => this.deleteEdit();
+            document.getElementById('cancelButton').onclick = () => { window.location.href = '/tactic/tactics.html'; };
+        }
+    }
+
+    async saveEdit() {
+        if (!this.editMode || !this.editPostId) return;
+        const formData = this.getFormData(false);
+        this.showLoading(true);
+        try {
+            const { error } = await supabase
+                .from('tactics')
+                .update({
+                    title: formData.title,
+                    author: document.getElementById('tacticAuthor').value,
+                    comment: formData.comment || null,
+                    region: formData.region,
+                    tactic_type: formData.type,
+                    query: this.tacticData
+                })
+                .eq('id', this.editPostId)
+                .eq('user_id', this.currentUser.id);
+            if (error) throw error;
+            alert(this.currentLang === 'en' ? 'Saved.' : this.currentLang === 'jp' ? '保存しました。' : '저장되었습니다.');
+            window.location.href = '/tactic/tactics.html';
+        } catch (e) {
+            alert(this.currentLang === 'en' ? 'Save failed.' : this.currentLang === 'jp' ? '保存に失敗しました。' : '저장에 실패했습니다.');
+        } finally {
+            this.showLoading(false);
+        }
+    }
+
+    async deleteEdit() {
+        if (!this.editMode || !this.editPostId) return;
+        const confirmMsg = this.currentLang === 'en' ? 'Delete this tactic?' : this.currentLang === 'jp' ? 'このタクティックを削除しますか？' : '이 택틱을 삭제할까요?';
+        if (!confirm(confirmMsg)) return;
+        this.showLoading(true);
+        try {
+            const { error } = await supabase
+                .from('tactics')
+                .delete()
+                .eq('id', this.editPostId)
+                .eq('user_id', this.currentUser.id);
+            if (error) throw error;
+            alert(this.currentLang === 'en' ? 'Deleted.' : this.currentLang === 'jp' ? '削除しました。' : '삭제되었습니다.');
+            window.location.href = '/tactic/tactics.html';
+        } catch (e) {
+            alert(this.currentLang === 'en' ? 'Delete failed.' : this.currentLang === 'jp' ? '削除に失敗しました。' : '삭제에 실패했습니다.');
+        } finally {
+            this.showLoading(false);
+        }
     }
 
     // 제목 자동 접두어 추가 기능 제거
