--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -36,7 +36,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
       <div class="top-buttons">
         <button class="export-import-btn" onclick="exportData()">내보내기</button>
         <button class="export-import-btn" onclick="importData()">가져오기</button>
-        <button class="export-import-btn" onclick="handleShare()">공유하기</button>
+        <!--<button class="export-import-btn" onclick="handleShare()">공유하기</button>-->
         <button class="export-import-btn capture-btn" onclick="captureAndShare()">화면 캡처</button>
         <button class="export-import-btn toggle-ui-btn" onclick="toggleUI()"></button>
       </div>
