--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -96,6 +96,28 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
             <button id="nextPage">다음</button>
         </div>
     </div>
+
+    <!-- 최하단 광고-->
+    <div style="height: 24px;"></div>
+    
+    <div id="ad-unit-bottom" class="AD-bottom" style="text-align: center; align-items: center; display: flex; justify-content: center;"> 
+    <ins class="adsbygoogle"
+        style="display:inline-block;width:728px;height:90px"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="9244892982"></ins>
+    </div>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+   </script>
+    <div style="height: 12px;"></div>
+    <!---->
+    <style>
+        @media (max-width: 540px) {
+            .AD-bottom {
+                display: none !important;
+            }
+        }
+    </style>
 </div>
 
 <script>
