--- a/apps/tactic/tactic-share.html
+++ b/apps/tactic/tactic-share.html
@@ -47,9 +47,9 @@ description: 페르소나5 더 팬텀 X 택틱을 자유롭게 공유하세요.
                 </div>
                 <div class="submit-container">
                     <div class="submit-text">
-                        <p>※ 부적절한 게시글은 작성자의 동의 없이 삭제될 수 있습니다.</p>
+                        <p>※ 신규 등록은 택틱 도서관에서 실시해주세요.</p>
                     </div>
-                    <button type="submit">등록</button>
+                    <button type="submit" disabled>등록</button>
                 </div>
             </form>
         </div>
