--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ alternate_urls:
             { selector: '.menu-card a[href*="./character/"]', path: './character/' },
             { selector: '.menu-card a[href*="./persona/"]', path: './persona/' },
             { selector: '.menu-card a[href*="./revelations/"]', path: './revelations/' },
-            { selector: '.menu-card a[href*="./tactic"]', path: currentLang === 'kr' ? './tactic/tactic-share.html' : './tactic/' }
+            { selector: '.menu-card a[href*="./tactic"]', path: './tactic/tactics/' }
         ];
         
         menuLinks.forEach(linkInfo => {
