--- a/character/character.html
+++ b/character/character.html
@@ -979,7 +979,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                  // 심상 번역 텍스트 정의
                  const mindTexts = {
                      'kr': '심상5',
-                     'en': 'Mind5',
+                     'en': 'Mindscape5',
                      'jp': '心象5'
                  };
                  
@@ -1254,7 +1254,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         // 영어/일본어에서 주의 메시지 표시
         if (currentLang === 'en' || currentLang === 'jp') {
             const warningMessage = currentLang === 'en' ? 
-                'The recommended settings are based on future content. Some features may not be currently available (Revelations, Mind, etc.)' :
+                'The recommended settings are based on future content. Some features may not be currently available (Revelations, Mindscape, etc.)' :
                 '推奨設定は将来のコンテンツを基準に提示されます。現在は存在しないコンテンツが含まれる可能性があります（啓示、心象など）';
             
             const warningDiv = document.createElement('div');
@@ -1413,7 +1413,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         // 심상 관련 텍스트 번역
         const mindTexts = {
             'kr': '심상5',
-            'en': 'Mind5',
+            'en': 'Mindscape5',
             'jp': '心象5'
         };
         // 심상 텍스트 번역은 battle-plus-stats에서 제외 (이미 처리됨)
@@ -2635,7 +2635,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     content: '별표는 가능하면 먼저 찍어야할 우선 순위 심상입니다.'
                 },
                 'en': {
-                    title: 'Mind (LV 5)',
+                    title: 'Mindscape (LV 5)',
                     content: 'Star indicates priority mind images that should be taken first if possible.'
                 },
                 'jp': {
